# cross-traffic-platform

./: .gitignore  make_netfile-x86_64-unknown-linux-gnu.spec  package-lock.json  package.json  playwright.config.ts  randomTrip-x86_64-unknown-linux-gnu.spec  run_sumo-x86_64-unknown-linux-gnu.spec  svelte.config.js  tailwind.config.js  vite.config.js
.svelte-kit/: ambient.d.ts
.svelte-kit/output/client/.vite/: manifest.json
.svelte-kit/output/client/_app/: version.json
.svelte-kit/output/prerendered/pages/: terms.html
.svelte-kit/output/server/: index.js  manifest-full.js  manifest.js
.svelte-kit/output/server/.vite/: manifest.json
.svelte-kit/output/server/assets/: HCM_middleware_bg.wasm
.svelte-kit/output/server/chunks/: @vite-plugin-wasm-pack@HCM-middleware.js  internal.js  ssr.js
.svelte-kit/output/server/nodes/: 0.js  1.js  2.js  3.js  4.js  5.js  6.js  7.js  (+1 more)
.svelte-kit/types/: route_meta_data.json
HCM-middleware/: Cargo.toml  modulize.js
HCM-middleware/src/: lib.rs
sim-coordination/sumo/: hcm15.add.vtype.xml  hcm15.edg.xml  hcm15.net.xml  hcm15.nod.xml  hcm15.rou.xml  hcm15.sumocfg  hcm15.trips.xml  hcm15.view.xml  make_netfile.py  randomTrip.py  run_sumo.py  trips.trips.xml
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json  trips.trips.xml
src/routes/: +error.svelte  +layout.svelte  +layout.ts  +page.svelte
src/routes/Calc/: +page.svelte
src/routes/Row/: +page.svelte
src/routes/SubRow/: +page.svelte
src/routes/about/: +page.svelte
src/routes/hcm15/: +page.svelte
src/routes/terms/: +page.svelte
tests/: test.ts
(+31 files in other folders)
